<resources>
    <string name="app_name">clubw</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Title-->
    <string name="welcome">Welcome to App Test</string>
    <string name="donthaveanaccount">Don´t Have an Account? Sign Up</string>
    <string name="forgotpassword">Forgot Your Password?</string>
    <string name="alreadyhaveanaccount">Already Have an Account? Sign In</string>

    <!--Actions-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="resetmypassword">Reset My Password</string>
    <string name="logout">Log Out</string>
    <string name="save">Save</string>

    <!--Fields-->
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="networks">Networks</string>

    <!--Values-->
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="standar">Standar</string>

    <!--Error-->
    <string name="error_empty_photo">Please select an image</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This Email Address is invalid</string>
    <string name="error_invalid_password">This Password is too short</string>
    <string name="error_networks">Check your Internet Connection</string>
    <string name="invalid_credentials">The User or Password is invalid</string>
    <string name="fail_register">Failed to Register</string>

    <!--Success-->
    <string name="success_save">Record successfully saved</string>
    <string name="success_email_reset">We send you an email to reset your password. Please check your email and follow the instructions to reset your password</string>
</resources>