<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="mainModel"
            type="ViewModels.MainViewModels" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroud"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/borde_layout"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titletextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="24sp"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">
                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:cardBackgroundColor="@color/colorButton"
                            app:cardCornerRadius="30dp">
                            <ImageView
                                android:id="@+id/user_imageview"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:srcCompat="@drawable/ic_client"
                                android:onClick="@{mainModel::onClick}"/>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fullname_text_input"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:hint="@string/fullname"
                        app:boxStrokeColor="@drawable/text_input_color"
                        android:textColorHint="@color/white"
                        app:errorEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fullname_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textColor="@color/white"
                            app:binding="@{mainModel.fullnameUI}"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_text_input"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        app:boxStrokeColor="@drawable/text_input_color"
                        android:textColorHint="@color/white"
                        app:errorEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/white"
                            app:binding="@{mainModel.emailUI}"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <androidx.legacy.widget.Space
                        android:layout_width="50dp"
                        android:layout_height="match_parent"/>
                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/buttonSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:text="@string/save"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/colorButton"
                        android:onClick="@{mainModel::onClick}"/>
                    <androidx.legacy.widget.Space
                        android:layout_width="50dp"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <androidx.legacy.widget.Space
                        android:layout_width="50dp"
                        android:layout_height="match_parent"/>
                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/buttonLogout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:text="@string/logout"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/colorButton"
                        android:onClick="@{mainModel::onClick}"/>
                    <androidx.legacy.widget.Space
                        android:layout_width="50dp"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>